--- a/src/components/meeting/ChatPanel/ChatPanel.module.css
+++ b/src/components/meeting/ChatPanel/ChatPanel.module.css
@@ -507,8 +507,8 @@
 
 @media (max-width: 900px) {
   .slot {
-    position: fixed;
-    top: 60px;
+    position: absolute;
+    top: 0;
     right: 0;
     bottom: 0;
     z-index: 25;
